2010-02-23  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        Adds ChromeClient::cancelGeolocationPermissionRequestForFrame
        https://bugs.webkit.org/show_bug.cgi?id=34962

        This method is required so that a Geolocation object can cancel an
        asynchronous permission request. This allows the chrome client to cancel
        any UI it is showing for the permission request.

        * WebCoreSupport/ChromeClientGtk.h:
        (WebKit::ChromeClient::cancelGeolocationPermissionRequestForFrame):

2010-02-23  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Do not do unnecessary work during size_allocate.

        FrameView::resize will already queue a layout, so there's no need
        to force one ourselves. On top of that, the layout function
        already adjusts the view size when needed, so there's no need to
        do that manually either. No change in the layout tests or unit
        tests after this.

        * webkit/webkitwebview.cpp:
        (webkit_web_view_size_allocate):

2010-02-22  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Update for release.

        * NEWS:

2010-02-22  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [Soup] loses information related to message flags when converting from/to Resource{Request,Response}
        https://bugs.webkit.org/show_bug.cgi?id=35093

        Update the flags that are stored in the request, when the response
        is received.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidReceiveResponse):

2010-02-20  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed. Trivial fix - unnecessary variable got added by
        mistake.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidReceiveResponse):

2010-02-18  Diego Escalante Urrelo  <descalante@igalia.com>
